--- a/index.html
+++ b/index.html
@@ -8,15 +8,192 @@
 </head>
 <body>
     <header>
+        <div id="logo">
+            <img src="" alt="logo">
+        </div>
 
+        <div>
+            <ul>
+                <li>On Campus</li>
+                <li>Online</li>
+                <li>For companies</li>
+                <li>Sign In</li>
+            </ul>
+        </div>
     </header>
     
     <main>
+        <div id="banner-one">
+            <div id="banner-one-left">
+                <img src="" alt="">
+            </div>
+
+            <div id="banner-one-right">
+                <h2></h2>
+                <h4></h4>
+                <button></button>
+            </div>
+        </div>
+
+        <div id="banner-two">
+            <div id="banner-two-left">
+                <img src="" alt="">
+            </div>
+
+            <div id="banner-two-right">
+                <div class="mini-banner">
+                    <div class="mini-banner-left">
+                        <img src="" alt="">
+                    </div>
+
+                    <div class="mini-banner-right">
+                        <h3></h3>
+                        <p></p>
+                        <a href=""></a>
+                    </div>
+
+                    <div class="mini-banner-left">
+                        <img src="" alt="">
+                    </div>
+
+                    <div class="mini-banner-right">
+                        <h3></h3>
+                        <p></p>
+                        <a href=""></a>
+                    </div>
+
+                    <div class="mini-banner-left">
+                        <img src="" alt="">
+                    </div>
+
+                    <div class="mini-banner-right">
+                        <h3></h3>
+                        <p></p>
+                        <a href=""></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="start-learning">
+            <div id="start-learning-header">
+                <h2></h2>
+            </div>
+
+            <div class="start-learning-card">
+                <div class="card-image">
+                    <img src="" alt="">
+                </div>
+
+                <div class="card-info">
+                    <h3></h3>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+
+            <div class="start-learning-card">
+                <div class="card-image">
+                    <img src="" alt="">
+                </div>
+
+                <div class="card-info">
+                    <h3></h3>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+
+            <div class="start-learning-card">
+                <div class="card-image">
+                    <img src="" alt="">
+                </div>
+
+                <div class="card-info">
+                    <h3></h3>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+
+            <div class="start-learning-card">
+                <div class="card-image">
+                    <img src="" alt="">
+                </div>
+
+                <div class="card-info">
+                    <h3></h3>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+
+            <div class="start-learning-card">
+                <div class="card-image">
+                    <img src="" alt="">
+                </div>
+
+                <div class="card-info">
+                    <h3></h3>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+
+            <div class="start-learning-card">
+                <div class="card-image">
+                    <img src="" alt="">
+                </div>
+
+                <div class="card-info">
+                    <h3></h3>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+
+        <div id="thesis-exhibit">
+            <div id="thesis-exhibit-left">
+                <div id="thesis-exhibit-video">
+                    <video src="">
+                        <source>
+                    </video>
+                </div>
+
+                <div id="thesis-exhibit-video-info">
+                    <h3></h3>
+                    <p></p>
+                </div>
+            </div>
+
+            <div id="thesis-exhibit-right">
+                <div class="thesis-exhibit-card">
+                    <div class="card-image">
+                        <img src="" alt="">
+                    </div>
+
+                    <div class="card-info">
+                        <h3></h3>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
 
     <footer>
-        
+        <div id="footer-left">
+            <p>© 2016 Colmar Academy. All rights reserved</p>
+        </div>
+
+        <div id="footer-right">
+            <ul>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Privacy</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
