Updated nav bar

--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 <body>
     <header>
         <div id="logo">
-            <img src="" alt="logo">
+            <img src="./resources/images/ic-logo.svg" alt="logo">
+            <h2>COLMAR<span>ACADEMY</span></h2>
         </div>
 
-        <div>
+        <nav>
             <ul>
                 <li>On Campus</li>
                 <li>Online</li>
                 <li>For companies</li>
                 <li>Sign In</li>
             </ul>
-        </div>
+        </nav>
     </header>
     
     <main>
